main_app/static/css/style.css
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-28 { font-size: 28px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-55 { font-size: 55px; }

.navbar-link{
    display: flex;
    align-items: center;
}

.navbar-link .material-icons{
    margin-right: 4px;
  }

#id_description{
    width: 50em;
    height:5em;
}


#truncateLongTexts {
    display: block;
    overflow: hidden !important;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

#short-description:hover {
    background-color:darkgray;
  }


#short-description{
    display:block;
}

.all-cards{
    display: block;
    padding: 10px 50px 20px;
    display: grid;
    grid-gap: 10px;
    margin-left: auto;
    margin-right: auto;
    justify-content: center;
}

.cards{
    display: block;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
    justify-content: center;
}

.col{
    display: block;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
    justify-content: center;
}


#id{
    box-sizing: border-box;
    width: 100%;
}
.time-box{
    display: block;
    font-size: x-small;
    text-align: right;
    justify-content: right;
}

#col4{
    padding: auto;
    align-items: center;
}

.like-button { 
    background-color: #000; 
    color: #FFF;
  }

.like-button.foo { 
    background-color: #FFF; 
    color: #000;
  }

.carousel-container{
    display: flex;
    justify-content: start;
    max-width: 640px;
}

.login-container{
    display: flex;
    justify-content: center;
    margin-top: 50px;
}

.navbar-link:active{
    background: #8461b8;
  }

.navbar-link:hover{
    color: #b8b261;
}

